--- a/css/styles.css
+++ b/css/styles.css
@@ -1,104 +1,34 @@
-@include media-breakpoint-up(sm) {
-    #toastDevice {
-        display: none
-    }
-
-    #toastbtn {
-        display: none
-    }
-}
-@include media-breakpoint-up(md) {
-	    #toastDevice {
-        display: none
-    }
-
-    #toastbtn {
-        display: none
-    }}
-@include media-breakpoint-up(lg) {  #toastDevice {
-        position: relative;
-        min-height: 200px;
-    }
-
-    .toast {
-        position: absolute;
-        top: 30%;
-        right: 5%;
-    }
-
-    #stats {
-        display: none
-    }
-
-    #statHeader {
-        display: none
-    }
-
-    #navStat {
-        display: none
-    }
- }
-@include media-breakpoint-up(xl) {  #toastDevice {
-        position: relative;
-        min-height: 200px;
-    }
-
-    .toast {
-        position: absolute;
-        top: 30%;
-        right: 5%;
-    }
-
-    #stats {
-        display: none
-    }
-
-    #statHeader {
-        display: none
-    }
-
-    #navStat {
-        display: none
-    }
-}
-@include media-breakpoint-up(xxl) {  #toastDevice {
-        position: relative;
-        min-height: 200px;
-    }
-
-    .toast {
-        position: absolute;
-        top: 30%;
-        right: 5%;
-    }
-
-    #stats {
-        display: none
-    }
-
-    #statHeader {
-        display: none
-    }
-
-    #navStat {
-        display: none
-    }
- }
-
-// Usage
-
-// Example: Hide starting at `min-width: 0`, and then show at the `sm` breakpoint
-.custom-class {
-  display: none;
-}
-@include media-breakpoint-up(sm) {
-  .custom-class {
-    display: block;
-  }
-}
-
 canvas {
     margin-right: auto;
     margin-left: auto;
     display: block;
+}
+
+
+@media (max-width: 767px) {
+
+    #toastDevice, #toastbtn {
+        display: none
+    }
+
+}
+
+
+@media (min-width: 1025px) {
+    #toastDevice {
+        position: relative;
+        min-height: 200px;
+    }
+
+    .toast {
+        position: absolute;
+        top: 30%;
+        right: 5%;
+    }
+
+    #stats, #statHeader, #navStat{
+        display: none
+    }
+
+
 }
